--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,5 @@
 services:
   - type: web
     name: signia-app
-    env: python
-    runtime: python-3.10
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "streamlit run app_streamlit.py --server.port $PORT --server.address 0.0.0.0"
+    env: docker
     plan: free
